--- a/.env
+++ b/.env
@@ -4,3 +4,5 @@ DATABASE_PASSWORD=schema_1_user
 DATABASE_SCHEMA=schema_1
 DATABASE_HOST=localhost
 DATABASE_PORT=5432
+
+ENVIRONMENT_MODE=development
