--- a/requirements.dev.txt
+++ b/requirements.dev.txt
@@ -1,6 +1,6 @@
-black==21.12b0
+black==23.1a1
 pip-upgrader==1.4.15
 pipdeptree==2.3.3
-pylint==2.15.7
+pylint==2.15.10
 commit-linter==1.0.2
 mypy==0.991
