--- a/compose.project.yaml
+++ b/compose.project.yaml
@@ -27,16 +27,23 @@ services:
     image: ghcr.io/joseesco24/postgres_users_db:latest
     networks:
       - dockerized_databases_network
+    ports:
+      - target: 5432
+        published: 5434
+        protocol: tcp
     volumes:
       - type: volume
         source: postgres_users_db_disc
         target: /var/lib/postgresql/data
-
   mongo_configs_db:
     container_name: mongo_configs_db
     image: ghcr.io/joseesco24/mongo_configs_db:latest
     networks:
       - dockerized_databases_network
+    ports:
+      - target: 27017
+        published: 5440
+        protocol: tcp
     volumes:
       - type: volume
         source: mongo_configs_db_disc
