fix: fixes on project compose file

--- a/compose.project.yaml
+++ b/compose.project.yaml
@@ -10,9 +10,9 @@ services:
       DATABASE_USER: ${DATABASE_USER}
       DATABASE_NAME: ${DATABASE_NAME}
       DATABASE_PASSWORD: ${DATABASE_PASSWORD}
-      DATABASE_HOST: ${DATABASE_HOST}
-      DATABASE_PORT: ${DATABASE_PORT}
-      ENVIRONMENT_MODE: ${ENVIRONMENT_MODE}
+      DATABASE_HOST: "postgres_users_db"
+      DATABASE_PORT: 5432
+      ENVIRONMENT_MODE: "production"
       SERVER_PORT: ${SERVER_PORT}
     ports:
       - target: 10048
