build: splitt env mode from compose mode

--- a/.env
+++ b/.env
@@ -4,6 +4,8 @@ DATABASE_PASSWORD=schema_1_user
 DATABASE_HOST=localhost
 DATABASE_PORT=5434
 
+COMPOSE_ENVIRONMENT_MODE=production
+
 ENVIRONMENT_MODE=development
 SERVER_PORT=10048
 
