feat: redis module first integration

--- a/compose.project.yaml
+++ b/compose.project.yaml
@@ -7,15 +7,20 @@ services:
     networks:
       - dockerized_databases_network
     environment:
-      DATABASE_USER: ${DATABASE_USER}
-      DATABASE_NAME: ${DATABASE_NAME}
-      DATABASE_PASSWORD: ${DATABASE_PASSWORD}
-      DATABASE_HOST: "postgres_users_db"
-      DATABASE_PORT: 5432
       ENVIRONMENT_MODE: ${COMPOSE_ENVIRONMENT_MODE}
       SERVER_PORT: ${SERVER_PORT}
+      DATABASE_PASSWORD: ${DATABASE_PASSWORD}
+      DATABASE_HOST: "postgres_users_db"
+      DATABASE_USER: ${DATABASE_USER}
+      DATABASE_NAME: ${DATABASE_NAME}
+      DATABASE_PORT: 5432
       RESOLVERS_CACHE_SIZE: ${RESOLVERS_CACHE_SIZE}
       RESOLVERS_CACHE_TTL: ${RESOLVERS_CACHE_TTL}
+      CACHE_DATABASE_PASSWORD: ${CACHE_DATABASE_PASSWORD}
+      CACHE_DATABASE_LOGS: ${CACHE_DATABASE_LOGS}
+      CACHE_DATABASE_NAME: ${CACHE_DATABASE_NAME}
+      CACHE_DATABASE_HOST: "redis_cache_db"
+      CACHE_DATABASE_PORT: 6378
     ports:
       - target: 10048
         published: 10048
