--- a/.env
+++ b/.env
@@ -1,8 +1,14 @@
-DATABASE_USER=schema_1_user
-DATABASE_NAME=users_db
 DATABASE_PASSWORD=schema_1_user
+DATABASE_USER=schema_1_user
 DATABASE_HOST=localhost
+DATABASE_NAME=users_db
 DATABASE_PORT=5434
+
+CACHE_DATABASE_PASSWORD=miredisssecretpassword
+CACHE_DATABASE_HOST=localhost
+CACHE_DATABASE_LOGS="true"
+CACHE_DATABASE_PORT=5436
+CACHE_DATABASE_NAME=0
 
 COMPOSE_ENVIRONMENT_MODE=production
 
