feat: logging implementation on users database module

--- a/.env
+++ b/.env
@@ -2,6 +2,7 @@ DATABASE_PASSWORD=schema_1_user
 DATABASE_USER=schema_1_user
 DATABASE_HOST=localhost
 DATABASE_NAME=users_db
+DATABASE_LOGS="true"
 DATABASE_PORT=5434
 
 CACHE_DATABASE_PASSWORD=miredisssecretpassword
