--- a/compose.project.yaml
+++ b/compose.project.yaml
@@ -11,6 +11,7 @@ services:
       SERVER_PORT: ${SERVER_PORT}
       DATABASE_PASSWORD: ${DATABASE_PASSWORD}
       DATABASE_HOST: "postgres_users_db"
+      DATABASE_LOGS: ${DATABASE_LOGS}
       DATABASE_USER: ${DATABASE_USER}
       DATABASE_NAME: ${DATABASE_NAME}
       DATABASE_PORT: 5432
