refactor: rename on env variables and remove unused modules

--- a/compose.project.yaml
+++ b/compose.project.yaml
@@ -7,16 +7,15 @@ services:
     networks:
       - dockerized_databases_network
     environment:
-      ENVIRONMENT_MODE: ${COMPOSE_ENVIRONMENT_MODE}
-      SERVER_PORT: ${SERVER_PORT}
+      APP_ENVIRONMENT_MODE: ${APP_ENVIRONMENT_MODE}
+      APP_SERVER_PORT: ${APP_SERVER_PORT}
       DATABASE_PASSWORD: ${DATABASE_PASSWORD}
       DATABASE_HOST: "postgres_users_db"
       DATABASE_LOGS: ${DATABASE_LOGS}
       DATABASE_USER: ${DATABASE_USER}
       DATABASE_NAME: ${DATABASE_NAME}
       DATABASE_PORT: 5432
-      RESOLVERS_CACHE_SIZE: ${RESOLVERS_CACHE_SIZE}
-      RESOLVERS_CACHE_TTL: ${RESOLVERS_CACHE_TTL}
+      CACHE_DATABASE_DEFAULT_TTL: ${CACHE_DATABASE_DEFAULT_TTL}
       CACHE_DATABASE_PASSWORD: ${CACHE_DATABASE_PASSWORD}
       CACHE_DATABASE_LOGS: ${CACHE_DATABASE_LOGS}
       CACHE_DATABASE_NAME: ${CACHE_DATABASE_NAME}
