--- a/.env
+++ b/.env
@@ -6,15 +6,11 @@ DATABASE_LOGS="true"
 DATABASE_PORT=5434
 
 CACHE_DATABASE_PASSWORD=miredisssecretpassword
+CACHE_DATABASE_DEFAULT_TTL=30
 CACHE_DATABASE_HOST=localhost
 CACHE_DATABASE_LOGS="true"
 CACHE_DATABASE_PORT=5436
 CACHE_DATABASE_NAME=0
 
-COMPOSE_ENVIRONMENT_MODE=production
-
-ENVIRONMENT_MODE=development
-SERVER_PORT=10048
-
-RESOLVERS_CACHE_SIZE=1024
-RESOLVERS_CACHE_TTL=30
+APP_ENVIRONMENT_MODE=development
+APP_SERVER_PORT=10048
