feat: database health check middleware setting throught env variables

--- a/.env
+++ b/.env
@@ -12,5 +12,6 @@ CACHE_DATABASE_LOGS="true"
 CACHE_DATABASE_PORT=5436
 CACHE_DATABASE_NAME=0
 
+APP_USE_DATABASE_HEALTH_CHECK_MIDDLEWARE="true"
 APP_ENVIRONMENT_MODE=development
 APP_SERVER_PORT=10048
