--- a/compose.project.yaml
+++ b/compose.project.yaml
@@ -7,6 +7,8 @@ services:
     networks:
       - dockerized_databases_network
     environment:
+      APP_USE_DATABASE_HEALTH_CHECK_MIDDLEWARE_EXCLUDE: ${APP_USE_DATABASE_HEALTH_CHECK_MIDDLEWARE_EXCLUDE}
+      APP_USE_DATABASE_HEALTH_CHECK_MIDDLEWARE: ${APP_USE_DATABASE_HEALTH_CHECK_MIDDLEWARE}
       APP_ENVIRONMENT_MODE: ${APP_ENVIRONMENT_MODE}
       APP_SERVER_PORT: ${APP_SERVER_PORT}
       DATABASE_PASSWORD: ${DATABASE_PASSWORD}
