feat: new env variables, and modules config in pro of debugging mode

--- a/compose.project.yaml
+++ b/compose.project.yaml
@@ -10,6 +10,7 @@ services:
       APP_USE_DATABASE_HEALTH_CHECK_MIDDLEWARE_EXCLUDE: ${APP_USE_DATABASE_HEALTH_CHECK_MIDDLEWARE_EXCLUDE}
       APP_USE_DATABASE_HEALTH_CHECK_MIDDLEWARE: ${APP_USE_DATABASE_HEALTH_CHECK_MIDDLEWARE}
       APP_ENVIRONMENT_MODE: ${APP_ENVIRONMENT_MODE}
+      APP_LOGGING_MODE: ${APP_LOGGING_MODE}
       APP_SERVER_PORT: ${APP_SERVER_PORT}
       DATABASE_PASSWORD: ${DATABASE_PASSWORD}
       DATABASE_HOST: "postgres_users_db"
