--- a/.env
+++ b/.env
@@ -15,4 +15,5 @@ CACHE_DATABASE_NAME=0
 APP_USE_DATABASE_HEALTH_CHECK_MIDDLEWARE_EXCLUDE='["health-check/is-everything-ok"]'
 APP_USE_DATABASE_HEALTH_CHECK_MIDDLEWARE="true"
 APP_ENVIRONMENT_MODE=development
+APP_LOGGING_MODE=pretty
 APP_SERVER_PORT=10048
