--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,9 +6,6 @@ authors = ["joseesco24 <josed.escobar@outlook.com>"]
 readme = "readme.md"
 packages = [{ include = "users_crud_api_python" }]
 
-[tool.poetry.scripts]
-format = "black:main"
-
 [tool.poetry.dependencies]
 python = "^3.11"
 fastapi = "^0.89.1"
@@ -18,7 +15,7 @@ loguru = "^0.6.0"
 ariadne = "^0.17.1"
 redis = "^4.4.2"
 psutil = "^5.9.4"
-pydantic = {extras = ["dotenv"], version = "^1.10.4"}
+pydantic = { extras = ["dotenv"], version = "^1.10.4" }
 uvicorn = "^0.20.0"
 
 [tool.poetry.group.dev.dependencies]
@@ -27,6 +24,9 @@ pylint = "^2.16.0"
 commit-linter = "^1.0.2"
 mypy = "^0.991"
 watchfiles = "^0.18.1"
+pre-commit = "^3.0.3"
+wrapt = "^1.14.1"
+dill = "^0.3.6"
 
 [build-system]
 requires = ["poetry-core"]
