--- a/.env
+++ b/.env
@@ -14,6 +14,10 @@ CACHE_DATABASE_NAME=0
 
 APP_USE_DATABASE_HEALTH_CHECK_MIDDLEWARE_EXCLUDE='["health-check/is-everything-ok"]'
 APP_USE_DATABASE_HEALTH_CHECK_MIDDLEWARE="true"
+# ** info: app environment mode
+# ** info: options: development, production, testing
 APP_ENVIRONMENT_MODE=development
+# ** info: app environment mode
+# ** info: options: pretty, structured
 APP_LOGGING_MODE=pretty
 APP_SERVER_PORT=10048
