--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,9 @@ authors = ["joseesco24 <josed.escobar@outlook.com>"]
 readme = "readme.md"
 packages = [{ include = "users_crud_api_python" }]
 
+[tool.poetry.scripts]
+pre_commit = "pre-commit install --hook-type pre-commit"
+
 [tool.poetry.dependencies]
 python = "^3.11"
 fastapi = "^0.89.1"
@@ -20,13 +23,13 @@ uvicorn = "^0.20.0"
 
 [tool.poetry.group.dev.dependencies]
 black = "^23.1a1"
-pylint = "^2.16.0"
 commit-linter = "^1.0.2"
 mypy = "^0.991"
 watchfiles = "^0.18.1"
 pre-commit = "^3.0.3"
 wrapt = "^1.14.1"
 dill = "^0.3.6"
+flake8 = "^6.0.0"
 
 [build-system]
 requires = ["poetry-core"]
