--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -35,7 +35,7 @@ repos:
     hooks:
       - id: black
         args: [--line-length=120]
-        files: "src/.*\\..*"
+        files: ".*/src/.*\\.py"
         types: ["python"]
 
   - repo: https://github.com/PyCQA/flake8
@@ -43,7 +43,7 @@ repos:
     hooks:
       - id: flake8
         args: [--max-line-length=120]
-        files: "src/.*\\..*"
+        files: ".*/src/.*\\.py"
         types: ["python"]
 #
 #  - repo: https://github.com/pre-commit/mirrors-mypy
