feat: new regex por pre-commit hooks

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -50,4 +50,5 @@ repos:
 #    rev: "0.991"
 #    hooks:
 #      - id: mypy
+#        files: ".*/src/.*\\.py"
 #        args: [--no-strict-optional, --ignore-missing-imports]
