--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -35,7 +35,7 @@ repos:
     hooks:
       - id: black
         args: [--line-length=120]
-        files: ".*/src/.*\\.py"
+        files: "^src/"
         types: ["python"]
 
   - repo: https://github.com/PyCQA/flake8
@@ -43,12 +43,13 @@ repos:
     hooks:
       - id: flake8
         args: [--max-line-length=120]
-        files: ".*/src/.*\\.py"
+        files: "^src/"
         types: ["python"]
 #
 #  - repo: https://github.com/pre-commit/mirrors-mypy
 #    rev: "0.991"
 #    hooks:
 #      - id: mypy
-#        files: ".*/src/.*\\.py"
 #        args: [--no-strict-optional, --ignore-missing-imports]
+#        files: "^src/"
+#        types: ["python"]
