feat: regex update form commit and linting files

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -6,6 +6,7 @@ repos:
     rev: "1.3.2"
     hooks:
       - id: poetry-export
+        files: "poetry.lock"
         args:
           [
             "--without-hashes",
@@ -21,6 +22,7 @@ repos:
     rev: "1.3.2"
     hooks:
       - id: poetry-export
+        files: "poetry.lock"
         args:
           [
             "--without-hashes",
