--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -2,6 +2,21 @@ default_stages: [commit]
 default_language_version:
   python: python3.11
 repos:
+  - repo: https://github.com/compilerla/conventional-pre-commit
+    rev: "v2.1.1"
+    hooks:
+      - id: conventional-pre-commit
+        stages: [commit-msg]
+        args: []
+
+  - repo: https://github.com/pre-commit/pre-commit-hooks
+    rev: "v4.4.0"
+    hooks:
+      - id: trailing-whitespace
+      - id: detect-private-key
+      - id: mixed-line-ending
+      - id: end-of-file-fixer
+
   - repo: https://github.com/python-poetry/poetry
     rev: "1.3.2"
     hooks:
