--- a/requirements.app.txt
+++ b/requirements.app.txt
@@ -3,6 +3,7 @@ ariadne==0.17.1 ; python_version >= "3.11" and python_version < "4.0"
 async-timeout==4.0.2 ; python_version >= "3.11" and python_version < "4.0"
 click==8.1.3 ; python_version >= "3.11" and python_version < "4.0"
 colorama==0.4.6 ; python_version >= "3.11" and python_version < "4.0" and sys_platform == "win32" or python_version >= "3.11" and python_version < "4.0" and platform_system == "Windows"
+conventional-pre-commit==2.1.1 ; python_version >= "3.11" and python_version < "4.0"
 fastapi==0.89.1 ; python_version >= "3.11" and python_version < "4.0"
 graphql-core==3.2.3 ; python_version >= "3.11" and python_version < "4"
 greenlet==2.0.2 ; python_version >= "3.11" and python_version < "4.0" and platform_machine == "aarch64" or python_version >= "3.11" and python_version < "4.0" and platform_machine == "ppc64le" or python_version >= "3.11" and python_version < "4.0" and platform_machine == "x86_64" or python_version >= "3.11" and python_version < "4.0" and platform_machine == "amd64" or python_version >= "3.11" and python_version < "4.0" and platform_machine == "AMD64" or python_version >= "3.11" and python_version < "4.0" and platform_machine == "win32" or python_version >= "3.11" and python_version < "4.0" and platform_machine == "WIN32"
