--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ packages = [{ include = "users_crud_api_python" }]
 
 [tool.poetry.scripts]
 pre_commit = "pre-commit install --hook-type pre-commit"
+commit_msg = "pre-commit install --hook-type commit-msg"
 
 [tool.poetry.dependencies]
 python = "^3.11"
