--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -6,7 +6,7 @@ repos:
     rev: "v2.1.1"
     hooks:
       - id: conventional-pre-commit
-        stages: [prepare-commit-msg, commit-msg]
+        stages: [commit-msg]
         args:
           [
             "build",
@@ -35,6 +35,7 @@ repos:
     hooks:
       - id: poetry-export
         files: "poetry.lock"
+        stages: ["commit", "post-commit"]
         args:
           [
             "--without-hashes",
@@ -51,6 +52,7 @@ repos:
     hooks:
       - id: poetry-export
         files: "poetry.lock"
+        stages: ["commit", "post-commit"]
         args:
           [
             "--without-hashes",
