--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ readme = "readme.md"
 packages = [{ include = "users_crud_api_python" }]
 
 [tool.poetry.scripts]
+post_commit = "pre-commit install --hook-type post-commit"
 pre_commit = "pre-commit install --hook-type pre-commit"
 commit_msg = "pre-commit install --hook-type commit-msg"
 
