--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -35,7 +35,7 @@ repos:
     hooks:
       - id: poetry-export
         files: "poetry.lock"
-        stages: ["commit", "post-commit"]
+        stages: ["post-commit"]
         args:
           [
             "--without-hashes",
@@ -52,7 +52,7 @@ repos:
     hooks:
       - id: poetry-export
         files: "poetry.lock"
-        stages: ["commit", "post-commit"]
+        stages: ["post-commit"]
         args:
           [
             "--without-hashes",
@@ -77,11 +77,11 @@ repos:
         args: [--max-line-length=120]
         files: "^src/"
         types: ["python"]
-  #
-  #  - repo: https://github.com/pre-commit/mirrors-mypy
-  #    rev: "0.991"
-  #    hooks:
-  #      - id: mypy
-  #        args: [--no-strict-optional, --ignore-missing-imports]
-  #        files: "^src/"
-  #        types: ["python"]
+
+  - repo: https://github.com/pre-commit/mirrors-mypy
+    rev: "v0.991"
+    hooks:
+      - id: mypy
+        args: [--no-strict-optional, --ignore-missing-imports]
+        files: "^src/"
+        types: ["python"]
