--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -77,11 +77,11 @@ repos:
         args: [--max-line-length=120]
         files: "^src/"
         types: ["python"]
-
-  - repo: https://github.com/pre-commit/mirrors-mypy
-    rev: "v0.991"
-    hooks:
-      - id: mypy
-        args: [--no-strict-optional, --ignore-missing-imports]
-        files: "^src/"
-        types: ["python"]
+#
+#  - repo: https://github.com/pre-commit/mirrors-mypy
+#    rev: "v0.991"
+#    hooks:
+#      - id: mypy
+#        args: [--no-strict-optional, --ignore-missing-imports]
+#        files: "^src/"
+#        types: ["python"]
