--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -19,6 +19,7 @@ repos:
             "revert",
             "test",
             "style",
+            "wip",
           ]
 
   - repo: https://github.com/pre-commit/pre-commit-hooks
