--- a/.env
+++ b/.env
@@ -19,5 +19,5 @@ APP_USE_DATABASE_HEALTH_CHECK_MIDDLEWARE="true"
 APP_ENVIRONMENT_MODE=development
 # ** info: app environment mode
 # ** info: options: pretty, structured
-APP_LOGGING_MODE=structured
+APP_LOGGING_MODE=pretty
 APP_SERVER_PORT=10048
