--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -6,6 +6,7 @@ repos:
     rev: "v2.1.1"
     hooks:
       - id: conventional-pre-commit
+        name: conventional commit revision
         stages: [commit-msg]
         args:
           [
@@ -26,6 +27,7 @@ repos:
     rev: "1.3.2"
     hooks:
       - id: poetry-export
+        name: export dev requirements
         files: "poetry.lock"
         args:
           [
@@ -42,6 +44,7 @@ repos:
     rev: "1.3.2"
     hooks:
       - id: poetry-export
+        name: export app requirements
         files: "poetry.lock"
         args:
           [
@@ -54,8 +57,8 @@ repos:
 
   - repo: local
     hooks:
-      - id: add-to-stage-exported-requirements-files
-        name: add to stage exported requirements files
+      - id: add-to-stage-exported-requirement-files
+        name: add to stage exported requirement files
         entry: bash -c 'git add requirements.app.txt && git add requirements.dev.txt'
         language: system
         files: "(^requirements.app.txt$)|(^requirements.dev.txt$)"
@@ -74,6 +77,7 @@ repos:
     rev: "23.1a1"
     hooks:
       - id: black
+        name: black code formatting
         args: [--line-length=120]
         files: "^src/"
         types: ["python"]
@@ -82,6 +86,7 @@ repos:
     rev: "6.0.0"
     hooks:
       - id: flake8
+        name: flake8 code revision
         args: [--max-line-length=120]
         files: "^src/"
         types: ["python"]
