--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,6 +33,7 @@ pre-commit = "^3.0.3"
 wrapt = "^1.14.1"
 dill = "^0.3.6"
 flake8 = "^6.0.0"
+pytest = "^7.2.1"
 
 [build-system]
 requires = ["poetry-core"]
