--- a/requirements.dev.txt
+++ b/requirements.dev.txt
@@ -1,8 +1,9 @@
 anyio==3.6.2 ; python_version >= "3.11" and python_version < "4.0"
+attrs==22.2.0 ; python_version >= "3.11" and python_version < "4.0"
 black==23.1.0 ; python_version >= "3.11" and python_version < "4.0"
 cfgv==3.3.1 ; python_version >= "3.11" and python_version < "4.0"
 click==8.1.3 ; python_version >= "3.11" and python_version < "4.0"
-colorama==0.4.6 ; python_version >= "3.11" and python_version < "4.0" and platform_system == "Windows"
+colorama==0.4.6 ; python_version >= "3.11" and python_version < "4.0" and sys_platform == "win32" or python_version >= "3.11" and python_version < "4.0" and platform_system == "Windows"
 commit-linter==1.0.2 ; python_version >= "3.11" and python_version < "4.0"
 dill==0.3.6 ; python_version >= "3.11" and python_version < "4.0"
 distlib==0.3.6 ; python_version >= "3.11" and python_version < "4.0"
@@ -10,6 +11,7 @@ filelock==3.9.0 ; python_version >= "3.11" and python_version < "4.0"
 flake8==6.0.0 ; python_version >= "3.11" and python_version < "4.0"
 identify==2.5.17 ; python_version >= "3.11" and python_version < "4.0"
 idna==3.4 ; python_version >= "3.11" and python_version < "4.0"
+iniconfig==2.0.0 ; python_version >= "3.11" and python_version < "4.0"
 mccabe==0.7.0 ; python_version >= "3.11" and python_version < "4.0"
 mypy-extensions==1.0.0 ; python_version >= "3.11" and python_version < "4.0"
 mypy==1.0.0 ; python_version >= "3.11" and python_version < "4.0"
@@ -17,9 +19,11 @@ nodeenv==1.7.0 ; python_version >= "3.11" and python_version < "4.0"
 packaging==23.0 ; python_version >= "3.11" and python_version < "4.0"
 pathspec==0.11.0 ; python_version >= "3.11" and python_version < "4.0"
 platformdirs==3.0.0 ; python_version >= "3.11" and python_version < "4.0"
+pluggy==1.0.0 ; python_version >= "3.11" and python_version < "4.0"
 pre-commit==3.0.4 ; python_version >= "3.11" and python_version < "4.0"
 pycodestyle==2.10.0 ; python_version >= "3.11" and python_version < "4.0"
 pyflakes==3.0.1 ; python_version >= "3.11" and python_version < "4.0"
+pytest==7.2.1 ; python_version >= "3.11" and python_version < "4.0"
 pyyaml==6.0 ; python_version >= "3.11" and python_version < "4.0"
 setuptools==67.2.0 ; python_version >= "3.11" and python_version < "4.0"
 sniffio==1.3.0 ; python_version >= "3.11" and python_version < "4.0"
