--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -83,11 +83,20 @@ repos:
         args: [--max-line-length=120]
         files: "^src/"
         types: ["python"]
-#
-#  - repo: https://github.com/pre-commit/mirrors-mypy
-#    rev: "v0.991"
-#    hooks:
-#      - id: mypy
-#        args: [--no-strict-optional, --ignore-missing-imports]
-#        files: "^src/"
-#        types: ["python"]
+  #
+  #  - repo: https://github.com/pre-commit/mirrors-mypy
+  #    rev: "v0.991"
+  #    hooks:
+  #      - id: mypy
+  #        args: [--no-strict-optional, --ignore-missing-imports]
+  #        files: "^src/"
+  #        types: ["python"]
+  #
+
+  - repo: local
+    hooks:
+      - id: run-pytest
+        name: run pytest tests
+        entry: bash -c 'pytest'
+        language: system
+        stages: [push]
