--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,15 +1,15 @@
 [tool.poetry]
 name = "users_crud_api_python"
-version = "1.5.1"
+version = "1.5.3"
 description = "A really simple CRUD GraphQL API based on Docker and Python."
 authors = ["joseesco24 <josed.escobar@outlook.com>"]
 readme = "readme.md"
 packages = [{ include = "users_crud_api_python" }]
 
 [tool.poetry.scripts]
-post_commit = "pre-commit install --hook-type post-commit"
 pre_commit = "pre-commit install --hook-type pre-commit"
 commit_msg = "pre-commit install --hook-type commit-msg"
+post_commit = "pre-commit install --hook-type pre-push"
 
 [tool.poetry.dependencies]
 python = "^3.11"
