--- a/.gitignore
+++ b/.gitignore
@@ -126,6 +126,15 @@ celerybeat.pid
 # SageMath parsed files
 *.sage.py
 
+# Environments
+# .env
+# .venv
+# env/
+# venv/
+# ENV/
+# env.bak/
+# venv.bak/
+
 # Spyder project settings
 .spyderproject
 .spyproject
@@ -160,5 +169,8 @@ cython_debug/
 ### Python Patch ###
 # Poetry local configuration file - https://python-poetry.org/docs/configuration/#local-configuration
 poetry.toml
+
+# ruff
+.ruff_cache/
 
 # End of https://www.toptal.com/developers/gitignore/api/python
