--- a/requirements.app.txt
+++ b/requirements.app.txt
@@ -4,7 +4,7 @@ async-timeout==4.0.2 ; python_version >= "3.11" and python_version < "4.0"
 click==8.1.3 ; python_version >= "3.11" and python_version < "4.0"
 colorama==0.4.6 ; python_version >= "3.11" and python_version < "4.0" and sys_platform == "win32" or python_version >= "3.11" and python_version < "4.0" and platform_system == "Windows"
 conventional-pre-commit==2.1.1 ; python_version >= "3.11" and python_version < "4.0"
-fastapi==0.92.0 ; python_version >= "3.11" and python_version < "4.0"
+fastapi==0.94.0 ; python_version >= "3.11" and python_version < "4.0"
 graphql-core==3.2.3 ; python_version >= "3.11" and python_version < "4"
 greenlet==2.0.2 ; python_version >= "3.11" and python_version < "4.0" and platform_machine == "aarch64" or python_version >= "3.11" and python_version < "4.0" and platform_machine == "ppc64le" or python_version >= "3.11" and python_version < "4.0" and platform_machine == "x86_64" or python_version >= "3.11" and python_version < "4.0" and platform_machine == "amd64" or python_version >= "3.11" and python_version < "4.0" and platform_machine == "AMD64" or python_version >= "3.11" and python_version < "4.0" and platform_machine == "win32" or python_version >= "3.11" and python_version < "4.0" and platform_machine == "WIN32"
 h11==0.14.0 ; python_version >= "3.11" and python_version < "4.0"
@@ -12,13 +12,13 @@ idna==3.4 ; python_version >= "3.11" and python_version < "4.0"
 loguru==0.6.0 ; python_version >= "3.11" and python_version < "4.0"
 psutil==5.9.4 ; python_version >= "3.11" and python_version < "4.0"
 psycopg2-binary==2.9.5 ; python_version >= "3.11" and python_version < "4.0"
-pydantic==1.10.5 ; python_version >= "3.11" and python_version < "4.0"
-pydantic[dotenv]==1.10.5 ; python_version >= "3.11" and python_version < "4.0"
+pydantic==1.10.6 ; python_version >= "3.11" and python_version < "4.0"
+pydantic[dotenv]==1.10.6 ; python_version >= "3.11" and python_version < "4.0"
 python-dotenv==1.0.0 ; python_version >= "3.11" and python_version < "4.0"
 redis==4.5.1 ; python_version >= "3.11" and python_version < "4.0"
 sniffio==1.3.0 ; python_version >= "3.11" and python_version < "4.0"
-sqlalchemy==2.0.4 ; python_version >= "3.11" and python_version < "4.0"
-starlette==0.25.0 ; python_version >= "3.11" and python_version < "4.0"
+sqlalchemy==2.0.5.post1 ; python_version >= "3.11" and python_version < "4.0"
+starlette==0.26.0.post1 ; python_version >= "3.11" and python_version < "4.0"
 typing-extensions==4.5.0 ; python_version >= "3.11" and python_version < "4.0"
-uvicorn==0.20.0 ; python_version >= "3.11" and python_version < "4.0"
+uvicorn==0.21.0 ; python_version >= "3.11" and python_version < "4.0"
 win32-setctime==1.1.0 ; python_version >= "3.11" and python_version < "4.0" and sys_platform == "win32"
