--- a/requirements.app.txt
+++ b/requirements.app.txt
@@ -6,7 +6,7 @@ colorama==0.4.6 ; python_version >= "3.11" and python_version < "4.0" and sys_pl
 conventional-pre-commit==2.1.1 ; python_version >= "3.11" and python_version < "4.0"
 fastapi==0.94.1 ; python_version >= "3.11" and python_version < "4.0"
 graphql-core==3.2.3 ; python_version >= "3.11" and python_version < "4"
-greenlet==2.0.2 ; python_version >= "3.11" and platform_machine == "aarch64" and python_version < "4.0" or python_version >= "3.11" and platform_machine == "ppc64le" and python_version < "4.0" or python_version >= "3.11" and platform_machine == "x86_64" and python_version < "4.0" or python_version >= "3.11" and platform_machine == "amd64" and python_version < "4.0" or python_version >= "3.11" and platform_machine == "AMD64" and python_version < "4.0" or python_version >= "3.11" and platform_machine == "win32" and python_version < "4.0" or python_version >= "3.11" and platform_machine == "WIN32" and python_version < "4.0"
+greenlet==2.0.2 ; python_version >= "3.11" and python_version < "4.0" and platform_machine == "aarch64" or python_version >= "3.11" and python_version < "4.0" and platform_machine == "ppc64le" or python_version >= "3.11" and python_version < "4.0" and platform_machine == "x86_64" or python_version >= "3.11" and python_version < "4.0" and platform_machine == "amd64" or python_version >= "3.11" and python_version < "4.0" and platform_machine == "AMD64" or python_version >= "3.11" and python_version < "4.0" and platform_machine == "win32" or python_version >= "3.11" and python_version < "4.0" and platform_machine == "WIN32"
 h11==0.14.0 ; python_version >= "3.11" and python_version < "4.0"
 idna==3.4 ; python_version >= "3.11" and python_version < "4.0"
 loguru==0.6.0 ; python_version >= "3.11" and python_version < "4.0"
@@ -20,5 +20,5 @@ sniffio==1.3.0 ; python_version >= "3.11" and python_version < "4.0"
 sqlalchemy==2.0.6 ; python_version >= "3.11" and python_version < "4.0"
 starlette==0.26.1 ; python_version >= "3.11" and python_version < "4.0"
 typing-extensions==4.5.0 ; python_version >= "3.11" and python_version < "4.0"
-uvicorn==0.21.0 ; python_version >= "3.11" and python_version < "4.0"
+uvicorn==0.21.1 ; python_version >= "3.11" and python_version < "4.0"
 win32-setctime==1.1.0 ; python_version >= "3.11" and python_version < "4.0" and sys_platform == "win32"
