--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,111 +1,19 @@
-default_stages: [commit]
 default_language_version:
   python: python3.11
 repos:
-  - repo: https://github.com/compilerla/conventional-pre-commit
-    rev: "v2.1.1"
-    hooks:
-      - id: conventional-pre-commit
-        name: conventional commit revision
-        stages: [commit-msg]
-        args:
-          [
-            "build",
-            "ci",
-            "docs",
-            "feat",
-            "fix",
-            "perf",
-            "refactor",
-            "revert",
-            "test",
-            "style",
-            "wip",
-          ]
-
-  - repo: https://github.com/python-poetry/poetry
-    rev: "1.3.2"
-    hooks:
-      - id: poetry-check
-        name: check poetry .toml file
-        files: "pyproject.toml"
-      - id: poetry-lock
-        name: lock dependencies info poetry lockfile
-        files: "pyproject.toml"
-      - id: poetry-export
-        name: export dev requirements
-        files: "pyproject.toml"
-        args:
-          [
-            "--without-hashes",
-            "--only",
-            "dev",
-            "--format",
-            "requirements.txt",
-            "--output",
-            "requirements.dev.txt",
-          ]
-      - id: poetry-export
-        name: export app requirements
-        files: "poetry.lock"
-        args:
-          [
-            "--without-hashes",
-            "--format",
-            "requirements.txt",
-            "--output",
-            "requirements.app.txt",
-          ]
-
-  - repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: "v4.4.0"
-    hooks:
-      - id: check-merge-conflict
-      - id: trailing-whitespace
-      - id: detect-private-key
-      - id: mixed-line-ending
-      - id: end-of-file-fixer
-
-  - repo: https://github.com/psf/black
-    rev: "23.1a1"
-    hooks:
-      - id: black
-        name: black code formatting
-        args: [--line-length=150]
-        files: "^src/"
-        types: ["python"]
-
-  - repo: https://github.com/PyCQA/flake8
-    rev: "6.0.0"
-    hooks:
-      - id: flake8
-        name: flake8 code revision
-        args: [--max-line-length=150]
-        files: "^src/"
-        types: ["python"]
-  #
-  #  - repo: https://github.com/pre-commit/mirrors-mypy
-  #    rev: "v0.991"
-  #    hooks:
-  #      - id: mypy
-  #        args: [--no-strict-optional, --ignore-missing-imports]
-  #        files: "^src/"
-  #        types: ["python"]
-  #
-
   - repo: local
     hooks:
-      - id: run-pytest
-        name: run pytest tests
-        entry: bash -c 'pytest'
-        language: system
-        stages: [push]
-
-  - repo: local
-    hooks:
-      - id: clean-python-cache-files
-        name: clean python cache files
-        entry: bash -c 'find . | grep -E "(/__pycache__$|\.pyc$|\.pyo$)" | xargs rm -rf'
-        language: system
-        always_run: true
-        stages: [push, commit]
+      - id: pre-commit
+        name: run pre-commit.sh script
+        entry: hooks/pre-commit.sh
+        language: script
+        stages: [commit]
+        types: [python]
+        pass_filenames: false
+      - id: commit-msg
+        name: run commit-msg.sh script
+        entry: hooks/commit-msg.sh
+        language: script
+        stages: [commit]
+        types: [python]
+        pass_filenames: false
