--- a/requirements.app.txt
+++ b/requirements.app.txt
@@ -3,10 +3,9 @@ ariadne==0.20.0 ; python_version >= "3.11" and python_version < "4.0"
 async-timeout==4.0.2 ; python_version >= "3.11" and python_full_version <= "3.11.2"
 click==8.1.3 ; python_version >= "3.11" and python_version < "4.0"
 colorama==0.4.6 ; python_version >= "3.11" and python_version < "4.0" and sys_platform == "win32" or python_version >= "3.11" and python_version < "4.0" and platform_system == "Windows"
-conventional-pre-commit==2.3.0 ; python_version >= "3.11" and python_version < "4.0"
 fastapi==0.98.0 ; python_version >= "3.11" and python_version < "4.0"
 graphql-core==3.2.3 ; python_version >= "3.11" and python_version < "4"
-greenlet==2.0.2 ; python_version >= "3.11" and python_version < "4.0" and platform_machine == "aarch64" or python_version >= "3.11" and python_version < "4.0" and platform_machine == "ppc64le" or python_version >= "3.11" and python_version < "4.0" and platform_machine == "x86_64" or python_version >= "3.11" and python_version < "4.0" and platform_machine == "amd64" or python_version >= "3.11" and python_version < "4.0" and platform_machine == "AMD64" or python_version >= "3.11" and python_version < "4.0" and platform_machine == "win32" or python_version >= "3.11" and python_version < "4.0" and platform_machine == "WIN32"
+greenlet==2.0.2 ; python_version >= "3.11" and platform_machine == "aarch64" and python_version < "4.0" or python_version >= "3.11" and platform_machine == "ppc64le" and python_version < "4.0" or python_version >= "3.11" and platform_machine == "x86_64" and python_version < "4.0" or python_version >= "3.11" and platform_machine == "amd64" and python_version < "4.0" or python_version >= "3.11" and platform_machine == "AMD64" and python_version < "4.0" or python_version >= "3.11" and platform_machine == "win32" and python_version < "4.0" or python_version >= "3.11" and platform_machine == "WIN32" and python_version < "4.0"
 h11==0.14.0 ; python_version >= "3.11" and python_version < "4.0"
 idna==3.4 ; python_version >= "3.11" and python_version < "4.0"
 loguru==0.7.0 ; python_version >= "3.11" and python_version < "4.0"
