--- a/requirements.dev.txt
+++ b/requirements.dev.txt
@@ -4,6 +4,7 @@ cfgv==3.3.1 ; python_version >= "3.11" and python_version < "4.0"
 click==8.1.3 ; python_version >= "3.11" and python_version < "4.0"
 colorama==0.4.6 ; python_version >= "3.11" and python_version < "4.0" and sys_platform == "win32" or python_version >= "3.11" and python_version < "4.0" and platform_system == "Windows"
 commit-linter==1.0.2 ; python_version >= "3.11" and python_version < "4.0"
+conventional-pre-commit==2.3.0 ; python_version >= "3.11" and python_version < "4.0"
 dill==0.3.6 ; python_version >= "3.11" and python_version < "4.0"
 distlib==0.3.6 ; python_version >= "3.11" and python_version < "4.0"
 filelock==3.12.2 ; python_version >= "3.11" and python_version < "4.0"
