--- a/requirements.app.txt
+++ b/requirements.app.txt
@@ -1,9 +1,10 @@
+annotated-types==0.5.0 ; python_version >= "3.11" and python_version < "4.0"
 anyio==3.7.1 ; python_version >= "3.11" and python_version < "4.0"
 ariadne==0.20.1 ; python_version >= "3.11" and python_version < "4.0"
 async-timeout==4.0.2 ; python_version >= "3.11" and python_full_version <= "3.11.2"
 click==8.1.4 ; python_version >= "3.11" and python_version < "4.0"
 colorama==0.4.6 ; python_version >= "3.11" and python_version < "4.0" and sys_platform == "win32" or python_version >= "3.11" and python_version < "4.0" and platform_system == "Windows"
-fastapi==0.99.1 ; python_version >= "3.11" and python_version < "4.0"
+fastapi==0.100.0 ; python_version >= "3.11" and python_version < "4.0"
 graphql-core==3.2.3 ; python_version >= "3.11" and python_version < "4"
 greenlet==2.0.2 ; python_version >= "3.11" and platform_machine == "aarch64" and python_version < "4.0" or python_version >= "3.11" and platform_machine == "ppc64le" and python_version < "4.0" or python_version >= "3.11" and platform_machine == "x86_64" and python_version < "4.0" or python_version >= "3.11" and platform_machine == "amd64" and python_version < "4.0" or python_version >= "3.11" and platform_machine == "AMD64" and python_version < "4.0" or python_version >= "3.11" and platform_machine == "win32" and python_version < "4.0" or python_version >= "3.11" and platform_machine == "WIN32" and python_version < "4.0"
 h11==0.14.0 ; python_version >= "3.11" and python_version < "4.0"
@@ -11,9 +12,9 @@ idna==3.4 ; python_version >= "3.11" and python_version < "4.0"
 loguru==0.7.0 ; python_version >= "3.11" and python_version < "4.0"
 psutil==5.9.5 ; python_version >= "3.11" and python_version < "4.0"
 psycopg2-binary==2.9.6 ; python_version >= "3.11" and python_version < "4.0"
-pydantic==1.10.11 ; python_version >= "3.11" and python_version < "4.0"
-pydantic[dotenv]==1.10.11 ; python_version >= "3.11" and python_version < "4.0"
-python-dotenv==1.0.0 ; python_version >= "3.11" and python_version < "4.0"
+pydantic-core==2.1.2 ; python_version >= "3.11" and python_version < "4.0"
+pydantic==2.0.2 ; python_version >= "3.11" and python_version < "4.0"
+pydantic[dotenv]==2.0.2 ; python_version >= "3.11" and python_version < "4.0"
 redis==4.6.0 ; python_version >= "3.11" and python_version < "4.0"
 sniffio==1.3.0 ; python_version >= "3.11" and python_version < "4.0"
 sqlalchemy==2.0.18 ; python_version >= "3.11" and python_version < "4.0"
