style: add pylance ignore typing linting in all files

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ redis = "^5.0.0"
 psutil = "^5.9.4"
 pydantic = { extras = ["dotenv"], version = "^2.0.2" }
 uvicorn = "^0.22.0"
+pydantic-settings = "^2.0.3"
 
 [tool.poetry.group.dev.dependencies]
 black = "^23.1a1"
