--- a/raw_requirements/requirements.app.txt
+++ b/raw_requirements/requirements.app.txt
@@ -13,8 +13,10 @@ loguru==0.7.2 ; python_version >= "3.11" and python_version < "4.0"
 psutil==5.9.5 ; python_version >= "3.11" and python_version < "4.0"
 psycopg2-binary==2.9.8 ; python_version >= "3.11" and python_version < "4.0"
 pydantic-core==2.10.1 ; python_version >= "3.11" and python_version < "4.0"
+pydantic-settings==2.0.3 ; python_version >= "3.11" and python_version < "4.0"
 pydantic==2.4.2 ; python_version >= "3.11" and python_version < "4.0"
 pydantic[dotenv]==2.4.2 ; python_version >= "3.11" and python_version < "4.0"
+python-dotenv==1.0.0 ; python_version >= "3.11" and python_version < "4.0"
 redis==5.0.1 ; python_version >= "3.11" and python_version < "4.0"
 sniffio==1.3.0 ; python_version >= "3.11" and python_version < "4.0"
 sqlalchemy==2.0.21 ; python_version >= "3.11" and python_version < "4.0"
