feat: new tv channel rest endpoints

--- a/.env
+++ b/.env
@@ -25,6 +25,15 @@ DATABASE_NAME=users_db
 DATABASE_LOGS="true"
 DATABASE_PORT=5434
 # ---------------------------------------------------------------------------------------------------------------------
+# ** info: tv database credentials
+# ---------------------------------------------------------------------------------------------------------------------
+TV_DATABASE_PASSWORD=tv_programation_schema_user
+TV_DATABASE_USER=tv_programation_schema_user
+TV_DATABASE_HOST=localhost
+TV_DATABASE_NAME=tv_channel_database
+TV_DATABASE_LOGS="true"
+TV_DATABASE_PORT=5434
+# ---------------------------------------------------------------------------------------------------------------------
 # ** info: cache database credentials
 # ---------------------------------------------------------------------------------------------------------------------
 CACHE_DATABASE_PASSWORD=miredisssecretpassword
