--- a/compose.project.yaml
+++ b/compose.project.yaml
@@ -20,6 +20,12 @@ services:
       DATABASE_USER: ${DATABASE_USER}
       DATABASE_NAME: ${DATABASE_NAME}
       DATABASE_PORT: 5432
+      TV_DATABASE_PASSWORD: ${TV_DATABASE_PASSWORD}
+      TV_DATABASE_HOST: "postgres_users_db"
+      TV_DATABASE_LOGS: ${TV_DATABASE_LOGS}
+      TV_DATABASE_USER: ${TV_DATABASE_USER}
+      TV_DATABASE_NAME: ${TV_DATABASE_NAME}
+      TV_DATABASE_PORT: 5432
       CACHE_DATABASE_DEFAULT_TTL: ${CACHE_DATABASE_DEFAULT_TTL}
       CACHE_DATABASE_PASSWORD: ${CACHE_DATABASE_PASSWORD}
       CACHE_DATABASE_LOGS: ${CACHE_DATABASE_LOGS}
