--- a/.env
+++ b/.env
@@ -12,7 +12,7 @@ APP_USE_DATABASE_HEALTH_CHECK_MIDDLEWARE="true"
 APP_ENVIRONMENT_MODE=development
 # ** info: app environment mode
 # ** info: options: pretty, structured
-APP_LOGGING_MODE=pretty
+APP_LOGGING_MODE=structured
 # ** info: app exposed on port
 APP_SERVER_PORT=10048
 # ---------------------------------------------------------------------------------------------------------------------
