--- a/compose.build.yaml
+++ b/compose.build.yaml
@@ -2,7 +2,7 @@ version: "3.8"
 
 services:
   users_crud_api_python_app:
-    image: ghcr.io/joseesco24/users_crud_api_python:latest
+    image: ghcr.io/joseesco24/users_crud_api_python:1.14.1
     build:
       dockerfile: Dockerfile
       context: .
