--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,7 +16,7 @@ ariadne = "^0.21.0"
 redis = "^5.0.0"
 psutil = "^5.9.4"
 pydantic = { extras = ["dotenv"], version = "^2.0.2" }
-uvicorn = "^0.22.0"
+uvicorn = "^0.24.0"
 pydantic-settings = "^2.0.3"
 
 [tool.poetry.group.dev.dependencies]
@@ -27,6 +27,7 @@ wrapt = "^1.14.1"
 dill = "^0.3.6"
 flake8 = "^6.0.0"
 pytest = "^7.2.1"
+poetry-plugin-export = "^1.6.0"
 
 
 [build-system]
